# DM_LifeManager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Caddyfile  DEPLOY-UPGRADE-PLAN.md  Dockerfile  Dockerfile.allinone  FIXES_2026-07-16.md  M2-realtime-gateway.md  M2-shared-calendar-finance.md  OVERVIEW-2026-07-11.md  OVERVIEW-2026-07-11b.md  OVERVIEW.md  README.md  ROUND7-VERIFICATION.md  ROUND8-VERIFICATION.md  caddy.auto.conf  caddy.conf  docker-compose.fnos.yml  docker-compose.simple.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  setup.js  start-dm-life.bat  tsconfig.base.json  债务管理P0P1落地说明.md  债务管理银行专业评估.md  脑图库选型与集成说明.md
.github/workflows/: make-public.yml  publish.yml
apps/allinone/: index.mjs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: completion-2026-07-13-modules-shared.md  design-2026-07-13-settings-launcher.md  finance-share-design.md  life-manager-alignment.md  migration-singleuser-to-collab.md
docs/redesign/: 01-round1.md  02-round2.md  03-round3.md  04-comparison-and-final.md  05-architecture.md  06-tech-stack.md  07-detailed-design.md
docs/refactor-yuvomi/: README.md  finance-v2-design.md
modules/balance/: index.js
public/: api.js  app.js  index.html  manifest.webmanifest  router.js  sw.js  theme-init.js  ui.js
scripts/: dev-clean.mjs  make_icon.py  shoot.mjs
server/: auth.js  db.js  index.js  logger.js  modules.js  security.js
test/: finance-v2.test.mjs  smoke.mjs
(+15 files in other folders)
