[package]
name = "dm-life-desktop"
version = "0.1.0"
description = "DM_life 桌面壳 (Tauri 2)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
panic = "abort"
strip = true
opt-level = "s"
